--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://catalogdb:27017",
+    "DatabaseName": "catalogdb",
+    "CollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
