--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "catalogDb",
+    "DatabaseName": "catalogdb",
     "CollectionName": "Products"
   },
   "AllowedHosts": "*"
